boton_texto_whats

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-primary mr-2" href="https://wa.me/15550472185"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-outline-primary mr-2" href="https://wa.me/15550472185/?text=¡Hola! Requiero información""><i class="fab fa-whatsapp"></i></a>
                         
                     </div>
                   
