--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                     <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/logo.jpeg" alt="Image">
-                    <h1 class="font-weight-bold">Intelisaas</h1>
+                    <h1 class="font-weight-bold">Martinez Hernandez Victor Manuel</h1>
                     <p class="mb-4">
                         "Transformamos desafíos tecnológicos en oportunidades estratégicas, guiando a las empresas hacia un futuro innovador y exitoso."
                     </p>
